2010-05-14  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	Remove reference to hotspot/default/icedtea-version.patch.

2010-01-20  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	Pass DERIVATIVE_ID and HOTSPOT_BUILD_VERSION
	to build (later only when the HotSpot Mercurial
	revision is available).  Update HotSpot and JDK
	revisions for related updates there.
	(patch.stamp): Move revision derivation to configure.
	* acinclude.m4:
	(IT_GET_LSB_DATA): Report results.
	(IT_CHECK_FOR_MERCURIAL): Macro wrapper around check for hg.
	(IT_OBTAIN_HG_REVISIONS): Obtain Mercurial revisions for
	IcedTea, JDK and HotSpot if available.
	* configure.ac:
	Call new macros.
	* patches/hotspot/default/icedtea-version.patch:
	Removed; applied to upstream forest.

2010-01-20  Xerxes Rånby  <xerxes@zafena.se>

	PR icedtea/431:
	* Makefile.am:
	Create a link from client to server after CACAO install
	to make openjdk find the expected client dir on 32bit systems.

2010-01-18 Andrew John Hughes  <ahughes@redhat.com>

	* configure.ac:
	Use AC_LANG_PUSH and AC_LANG_POP instead
	of deprecated SAVE and RESTORE macros.
	
2010-01-16 Andrew John Hughes  <ahughes@redhat.com>

	* acinclude.m4:
	(IT_CHECK_NUMBER_OF_PARALLEL_JOBS):
	Handle --with-parallel-jobs and
	--without-parallel-jobs correctly.
	--with-parallel-jobs (no arguments) uses
	available processors + 1, while
	--without-parallel-jobs (the default) uses 2.
	(IT_FIND_NUMBER_OF_PROCESSORS):
	Dependency of above.  Uses getconf to
	obtain the number of available processors.
	
2010-01-16 Andrew John Hughes  <ahughes@redhat.com>

	configure output and option cleanup
	* acinclude.m4:
	(FIND_ECJ_JAR): Always produce output,
	not just when explicitly specified.
	(FIND_JAVAH): Handle the yes and no
	possibilities better.
	(FIND_JAR): Likewise.
	(FIND_RMIC): Likewise.
	(WITH_OPENJDK_SRC_ZIP): Quote checking output.
	(WITH_ALT_JAR_BINARY): Likewise.
	(FIND_XALAN2_JAR): Improve wording.
	(FIND_XALAN2_SERIALIZER_JAR): Likewise.